fix: more dockerfile fixes

--- a/Executables/AdminApi/src/AdminApi/Dockerfile
+++ b/Executables/AdminApi/src/AdminApi/Dockerfile
@@ -95,7 +95,7 @@ COPY . .
 ARG VERSION
 
 RUN dotnet publish /p:UseAppHost=false --no-restore --configuration Release --output /app/publish "/src/Executables/AdminApi/src/AdminApi/AdminApi.csproj"
-RUN dotnet publish --configuration Release --output /app/publish/health "HealthCheck/HealthCheck.csproj"
+RUN dotnet publish --configuration Release --output /app/publish/health "/src/Executables/HealthCheck/src/HealthCheck.csproj"
 
 ### Final ####
 FROM mcr.microsoft.com/dotnet/aspnet:8.0.6-jammy-chiseled
