--- a/Executables/FilesSanityCheck/src/FilesSanityCheck/Dockerfile
+++ b/Executables/FilesSanityCheck/src/FilesSanityCheck/Dockerfile
@@ -5,7 +5,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
 COPY ["Directory.Build.props", "."]
-COPY ["Modules/Files/src/Files.Jobs.SanityCheck/Files.Jobs.SanityCheck.csproj", "Modules/Files/src/Files.Jobs.SanityCheck/"]
+COPY ["Executables/FilesSanityCheck/src/FilesSanityCheck/FilesSanityCheck.csproj", "Executables/FilesSanityCheck"]
 COPY ["BuildingBlocks/src/BuildingBlocks.Application.Abstractions/BuildingBlocks.Application.Abstractions.csproj", "BuildingBlocks/src/BuildingBlocks.Application.Abstractions/"]
 COPY ["BuildingBlocks/src/BuildingBlocks.Domain/BuildingBlocks.Domain.csproj", "BuildingBlocks/src/BuildingBlocks.Domain/"]
 COPY ["BuildingBlocks/src/DevelopmentKit.Identity/DevelopmentKit.Identity.csproj", "BuildingBlocks/src/DevelopmentKit.Identity/"]
@@ -24,11 +24,11 @@ COPY . .
 
 ARG VERSION
 
-WORKDIR "/src/Modules/Files/src/Files.Jobs.SanityCheck"
-RUN dotnet build "Files.Jobs.SanityCheck.csproj" --configuration Release --output /app/build --no-restore
+WORKDIR "/src/Executables/FilesSanityCheck/src/FilesSanityCheck"
+RUN dotnet build "FilesSanityCheck.csproj" --configuration Release --output /app/build --no-restore
 
 FROM build AS publish
-RUN dotnet publish /property:UseAppHost=false --configuration Release --output /app/publish --no-restore "Files.Jobs.SanityCheck.csproj" 
+RUN dotnet publish /property:UseAppHost=false --configuration Release --output /app/publish --no-restore "FilesSanityCheck.csproj" 
 
 FROM base AS final
 WORKDIR /app
