fix: update unit tests

--- a/Executables/SseServer/test/SseServerTests/SseServerTests.csproj
+++ b/Executables/SseServer/test/SseServerTests/SseServerTests.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
+        <ProjectReference Include="..\..\src\SseServer\SseServer.csproj" />
     </ItemGroup>
 
 </Project>
