--- a/Executables/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
+++ b/Executables/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
     </ItemGroup>
 
