--- a/Executables/IdentityDeletionJobs/test/Job.IdentityDeletion.Tests.Integration/Job.IdentityDeletion.Tests.Integration.csproj
+++ b/Executables/IdentityDeletionJobs/test/Job.IdentityDeletion.Tests.Integration/Job.IdentityDeletion.Tests.Integration.csproj
@@ -28,6 +28,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
+        <ProjectReference Include="..\..\..\..\Modules\Devices\src\Devices.Domain\Devices.Domain.csproj" />
+        <ProjectReference Include="..\..\..\..\Modules\Devices\src\Devices.Infrastructure\Devices.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\..\..\Modules\Messages\src\Messages.Infrastructure\Messages.Infrastructure.csproj" />
+        <ProjectReference Include="..\..\..\..\Modules\Relationships\src\Relationships.Infrastructure\Relationships.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
