--- a/Backbone.Tests.ArchUnit/Backbone.Tests.ArchUnit.csproj
+++ b/Backbone.Tests.ArchUnit/Backbone.Tests.ArchUnit.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
@@ -27,15 +27,11 @@
     <ProjectReference Include="..\BuildingBlocks\test\Crypto.Tests\Crypto.Tests.csproj" />
     <ProjectReference Include="..\BuildingBlocks\test\DevelopmentKit.Identity.Tests\DevelopmentKit.Identity.Tests.csproj" />
     <ProjectReference Include="..\BuildingBlocks\test\Tooling.Tests\Tooling.Tests.csproj" />
-    <ProjectReference Include="..\ConsumerApi\ConsumerApi.csproj" />
-    <ProjectReference Include="..\EventHandlerService\test\EventHandlerService.Tests\EventHandlerService.Tests.csproj" />
-    <ProjectReference Include="..\Jobs\test\Job.IdentityDeletion.Tests\Job.IdentityDeletion.Tests.csproj" />
     <ProjectReference Include="..\Modules\Devices\test\Devices.Application.Tests\Devices.Application.Tests.csproj" />
     <ProjectReference Include="..\Modules\Devices\test\Devices.Domain.Tests\Devices.Domain.Tests.csproj" />
     <ProjectReference Include="..\Modules\Devices\test\Devices.Infrastructure.Tests\Devices.Infrastructure.Tests.csproj" />
     <ProjectReference Include="..\Modules\Files\test\Files.Application.Tests\Files.Application.Tests.csproj" />
     <ProjectReference Include="..\Modules\Files\test\Files.Infrastructure.Tests\Files.Infrastructure.Tests.csproj" />
-    <ProjectReference Include="..\Modules\Files\test\Files.Jobs.SanityCheck.Tests\Files.Jobs.SanityCheck.Tests.csproj" />
     <ProjectReference Include="..\Modules\Messages\test\Messages.Application.Tests\Messages.Application.Tests.csproj" />
     <ProjectReference Include="..\Modules\Messages\test\Messages.Domain.Tests\Messages.Domain.Tests.csproj" />
     <ProjectReference Include="..\Modules\Quotas\test\Quotas.Application.Tests\Quotas.Application.Tests.csproj" />
