--- a/Executables/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
+++ b/Executables/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
@@ -26,6 +26,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
+        <ProjectReference Include="..\..\src\EventHandlerService\EventHandlerService.csproj" />
     </ItemGroup>
 
     <ItemGroup>
