--- a/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
+++ b/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
@@ -39,7 +39,7 @@
     </ItemGroup>
 
     <Target Name="PreBuild" BeforeTargets="Build" Condition="$(Configuration) == Debug">
-        <Delete Files="$(ProjectDir)appsettings.override.json" />
-        <Copy SourceFiles="..\..\..\appsettings.override.json" DestinationFolder="$(ProjectDir)" />
+        <Delete Files="$(ProjectDir)appsettings.override.json"/>
+        <Copy SourceFiles="..\..\..\appsettings.override.json" DestinationFolder="$(ProjectDir)" UseHardlinksIfPossible="true"/>
     </Target>
 </Project>
