--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: "22.4.1"
           cache: "npm"
           cache-dependency-path: "**/package.json"
       - name: Cache npm dependencies
@@ -70,7 +70,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: "22.4.1"
           cache: "npm"
           cache-dependency-path: "**/package.json"
       - name: Cache npm dependencies
@@ -131,7 +131,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: "22.4.1"
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
@@ -200,7 +200,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: "22.4.1"
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
@@ -284,7 +284,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: "22.4.1"
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
 
