feat: add POST /Files success case integration test

--- a/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
+++ b/ConsumerApi.Tests.Integration/ConsumerApi.Tests.Integration.csproj
@@ -53,4 +53,8 @@
             <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
         </SpecFlowFeatureFiles>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\Files\" />
+    </ItemGroup>
 </Project>
