Fix copying of general `appsettings.override.json` file (#745)
* fix: rework copy cmd so as not to rely on linux cmds

* fix: Use hardlinks instead of copies

* fix: Downgrade node version bc of a bug with npm

---------

Co-authored-by: Mika Herrmann <mika.herrmann@js-soft.com>

--- a/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
+++ b/Jobs/src/Job.IdentityDeletion/Job.IdentityDeletion.csproj
@@ -38,8 +38,8 @@
         <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.Infrastructure\Devices.Infrastructure.csproj"/>
     </ItemGroup>
 
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration) == Debug">
-        <Exec Command="rm -f appsettings.override.json"/>
-        <Exec Command="ln -f ../../../appsettings.override.json appsettings.override.json"/>
+    <Target Name="PreBuild" BeforeTargets="Build" Condition="$(Configuration) == Debug">
+        <Delete Files="$(ProjectDir)appsettings.override.json"/>
+        <Copy SourceFiles="..\..\..\appsettings.override.json" DestinationFolder="$(ProjectDir)" UseHardlinksIfPossible="true"/>
     </Target>
 </Project>
