--- a/Executables/DatabaseMigrator/src/DatabaseMigrator/Dockerfile
+++ b/Executables/DatabaseMigrator/src/DatabaseMigrator/Dockerfile
@@ -1,4 +1,4 @@
-﻿﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0.5-alpine3.18 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0.5-alpine3.18 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0.303 AS build
