Revert "fix: change password for database-migrator"
This reverts commit d51068f1f4ad25bd0666c64f073e66deeb07a3f9.

--- a/.ci/compose.test.postgres.yml
+++ b/.ci/compose.test.postgres.yml
@@ -32,7 +32,7 @@ services:
   database-migrator:
     environment:
       Infrastructure__SqlDatabase__Provider: Postgres
-      Infrastructure__SqlDatabase__ConnectionString: "Server=postgres;Database=enmeshed;User Id=postgres;Password=admin;Port=5432"
+      Infrastructure__SqlDatabase__ConnectionString: "Server=postgres;Database=enmeshed;User Id=postgres;Password=Passw0rd;Port=5432"
 
 configs:
   Config:
