--- a/.ci/appsettings.override.postgres.docker.json
+++ b/.ci/appsettings.override.postgres.docker.json
@@ -77,6 +77,9 @@
             }
         },
         "Relationships": {
+            "Application": {
+                "DidDomainName": "localhost"
+            },
             "Infrastructure": {
                 "SqlDatabase": {
                     "Provider": "Postgres",
