--- a/Executables/AdminCli/src/AdminCli/AdminCli.csproj
+++ b/Executables/AdminCli/src/AdminCli/AdminCli.csproj
@@ -10,11 +10,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Devices.Infrastructure\Devices.Infrastructure.csproj"/>
+        <ProjectReference Include="..\..\..\..\Modules\Devices\src\Devices.Infrastructure\Devices.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
