fix: pathing to appsettings.override.json

--- a/Executables/SseServer/src/SseServer/SseServer.csproj
+++ b/Executables/SseServer/src/SseServer/SseServer.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
+        <Content Include="..\..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
