chore: remove release

--- a/AdminApi/src/AdminApi/Dockerfile
+++ b/AdminApi/src/AdminApi/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR /src
 RUN dart pub global activate melos
 RUN dart pub global run melos:melos bootstrap
 WORKDIR /src/apps/admin_ui
-RUN flutter build web --base-href /new/ --wasm --release --output /build
+RUN flutter build web --base-href /new/ --wasm --output /build
 
 #### Build application ####
 FROM mcr.microsoft.com/dotnet/sdk:8.0-jammy AS build-env
