--- a/AdminUi/apps/admin_ui/pubspec.yaml
+++ b/AdminUi/apps/admin_ui/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  flutter_web_plugins:
+    sdk: flutter
   get_it: ^7.7.0
   go_router: ^14.2.1
   intl: any
