AdminUI: Show sent and received messages of an identity (#709)
* feat: add identity sent messages table

* fix: remove print and add missing comma

* fix: pagination error for not being returned

* fix: admin ui pipeline errors

* fix: run dart format

* refactor: extract necessary files into core

* chore: add more differentiation between sent and received messages

* chore: add empty table message

* fix: the same error after merge

* fix: revert

* feat: add recipients dialog

* fix: pipeline error

* chore: remove comma separation and add specificRowHeight

* chore: transfer text into localization file

* chore: remove button style

* chore: move messages table and source out of the core

* fix: import

* chore: move identity message to correct folder

* chore: extract more messages

* chore: swap the data column position

* chore: remove dump specific files to dumps folder

* chore: use single appsettings.json file for adminui and consumerapi in docker compose

* chore: extract backbone version to .env file

* feat: add navigation to other identities from sent and received messages

* chore: add proper translation names

* fix: add the spacing

* chore: change type from String to enum

* chore: use are spread operator

* refactor: change method name and parameter names

* refactor: rename a type

* fix: change the dialog name and restructure it

* refactor: change the button display text

* fix: remove inkwell it causes a bug when identity who sends the message is deleted

* fix: error thrown when moving away while loading

* fix: remove duplicate translation

* fix: don't wrap in another card

* chore: remove messageId and rename class

* chore: make recipients type safe

* chore: simplify

* refactor: rename

* fix: change method name

* fix: received message different row heights

* chore: add name to enum

* refactor: remove the verschlimmbesserte code

* chore: use buil

--- a/docker-compose/docker-compose.services.yml
+++ b/docker-compose/docker-compose.services.yml
@@ -1,11 +1,9 @@
 services:
   consumer-api:
-    image: ghcr.io/nmshd/backbone-consumer-api:v4.4.0
+    image: ghcr.io/nmshd/backbone-consumer-api:${BACKBONE_VERSION}
     container_name: consumerApi
     hostname: consumerApi
     environment:
-      - ASPNETCORE_ENVIRONMENT=Local
-
       - Modules__Files__Infrastructure__BlobStorage__ConnectionInfo="DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;"
 
     ports:
@@ -17,13 +15,13 @@ services:
       - postgres
       - seq
     volumes:
-      - ./consumerapi.appsettings.override.json:/app/appsettings.override.json
+      - ./appsettings.override.json:/app/appsettings.override.json
 
   admin-ui:
-    image: ghcr.io/nmshd/backbone-admin-ui:v2.5.0
+    image: ghcr.io/nmshd/backbone-admin-ui:${BACKBONE_VERSION}
     container_name: admin-ui
     hostname: adminUi
     ports:
       - "8082:8080"
     volumes:
-      - ./adminui.appsettings.override.json:/app/appsettings.override.json
+      - ./appsettings.override.json:/app/appsettings.override.json
