--- a/Applications/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
+++ b/Applications/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj" />
+        <ProjectReference Include="..\..\..\..\BuildingBlocks\src\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
         <ProjectReference Include="..\..\..\..\BuildingBlocks\src\UnitTestTools\UnitTestTools.csproj" />
         <ProjectReference Include="..\..\src\EventHandlerService\EventHandlerService.csproj" />
     </ItemGroup>
