--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch current dart file",
             "request": "launch",
             "type": "dart",
-            "toolArgs": ["--dart-define-from-file=${workspaceFolder}/AdminUi/config.local.json"],
+            "toolArgs": ["--dart-define-from-file=${workspaceFolder}/Applications/AdminUi/config.local.json"],
             "templateFor": ""
         }
     ]
