chore: refactors and new configs

--- a/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
+++ b/performance-tests/Identity.Pool.Creator/Identity.Pool.Creator.csproj
@@ -20,6 +20,9 @@
     <None Update="light-solution\ram.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="poolCreator.20240725-132656\ram.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="pools.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
