--- a/.ci/compose.test.postgres.yml
+++ b/.ci/compose.test.postgres.yml
@@ -19,10 +19,12 @@ services:
   ### seeds ###
 
   seed-database:
+    volumes:
+      - ../scripts/sql/postgres:/app/sql-scripts
     image: postgres
     environment:
       - PGPASSWORD=Passw0rd
-    command: psql -h postgres -U postgres -d enmeshed -f /app/scripts/sql/postgres/setup.sql
+    command: psql -h postgres -U postgres -d enmeshed -f /app/sql-scripts/setup.sql
 
   admin-cli:
     environment:
