--- a/.ci/compose.test.sqlserver.yml
+++ b/.ci/compose.test.sqlserver.yml
@@ -20,8 +20,10 @@ services:
   ### seeds ###
 
   seed-database:
+    volumes:
+      - ../scripts/sql/sqlserver:/app/sql-scripts
     image: mcr.microsoft.com/mssql-tools
-    command: bash -c " sleep 20 && /opt/mssql-tools/bin/sqlcmd -S sqlserver -U SA -P Passw0rd -i /app/setup-db/setup-sqlserver.sql "
+    command: bash -c " sleep 20 && /opt/mssql-tools/bin/sqlcmd -S sqlserver -U SA -P Passw0rd -i /app/sql-scripts/setup.sql"
 
   admin-cli:
     environment:
