--- a/AdminUi/apps/admin_ui/pubspec.yaml
+++ b/AdminUi/apps/admin_ui/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   admin_api_sdk: ^1.0.0
   admin_api_types: ^1.0.0
+  collection: ^1.18.0
   data_table_2: ^2.5.15
   dropdown_button2: ^2.3.9
   flutter:
