ci: add single group for all patches of all data sources

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,10 @@
             "matchDatasources": ["npm"],
             "packageNames": ["eslint"],
             "enabled": false
+        },
+        {
+            "groupName": "patch-all",
+            "matchUpdateTypes": ["patch", "digest"]
         }
     ]
 }
